# server

./: casparcg.config
src/CMakeModules/: Bootstrap_Linux.cmake
src/accelerator/ogl/util/: device.cpp  shader.cpp
src/modules/: CMakeLists.txt
src/modules/ffmpeg/consumer/: ffmpeg_consumer.cpp
src/modules/html/: html.cpp  packages.config
src/modules/html/producer/: html_producer.cpp
src/shell/: CMakeLists.txt
tools/linux/: build-base-images  ensure-base-images  image-versions  run_docker.sh  start_docker.sh
tools/linux/base/: Dockerfile
tools/linux/cef/: Dockerfile
