cmake_minimum_required(VERSION 2.6)
project("modules")

add_subdirectory(ffmpeg)
add_subdirectory(oal)
if (ENABLE_SCREEN)
    add_subdirectory(screen)
    add_subdirectory(newtek)
    add_subdirectory(decklink)
endif ()
if (ENABLE_HTML)
	add_subdirectory(html)
endif ()

if (MSVC)
	add_subdirectory(flash)
	add_subdirectory(bluefish)
endif()

add_subdirectory(image)
